tests/baselines/reference/YieldStarExpression4_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldStarExpression4_es6.ts(1,10): error TS1219: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/yieldExpressions/YieldStarExpression4_es6.ts (1 errors) ====
    function *g() {
             ~
!!! error TS1219: Generators are only available when targeting ECMAScript 6 or higher.
        yield * [];
    }